add hamburger icon feature to the example

--- a/css-2/lecture/media-query/collapse-navbar/index.html
+++ b/css-2/lecture/media-query/collapse-navbar/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class="mobile-nav-icon">☰</div>
   <nav class="navbar">
     <ul>
       <li><a href="#">RMIT Store</a></li>
