polish the personal site example

--- a/css-2/tutorial/exercise-3-personal-site/index.html
+++ b/css-2/tutorial/exercise-3-personal-site/index.html
@@ -37,8 +37,7 @@
 
       </div>
       <div class="skill-row">
-        <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
-
+        <img class="cat-img" src="https://media4.giphy.com/media/3oKIPnAiaMCws8nOsE/giphy.gif" alt="cat-img">
         <h3>Coding Challenges</h3>
         <p>But my best skill is actually in coding challenges. I am the undisputed king of coding challenges. Hackerrank and Leetcode are my favourite websites for practing coding challenges.</p>
 
