fix a few things

--- a/css-2/tutorial/exercise-3/tom-example/index.html
+++ b/css-2/tutorial/exercise-3/tom-example/index.html
@@ -6,6 +6,7 @@
   <title>Tom Huynh</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="icon" href="images/rmit-favicon.png">
 </head>
 
@@ -31,16 +32,18 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="https://media4.giphy.com/media/CuuSHzuc0O166MRfjt/giphy.gif" alt="code-img">
-        <h3>Programming Skills</h3>
-        <p>I started learning to code when I was 12 years old at grade 6 because I wanted to make my own video games. Then I realize I love data science, web dev & mobile dev.</p>
-
+        <img src="https://media4.giphy.com/media/CuuSHzuc0O166MRfjt/giphy.gif" alt="code-img">
+        <div>
+          <h3>Programming Skills</h3>
+          <p>I started learning to code when I was 12 years old at grade 6 because I wanted to make my own video games. Then I realize I love data science, web dev & mobile dev.</p>
+        </div>
       </div>
       <div class="skill-row">
-        <img class="cat-img" src="https://media4.giphy.com/media/3oKIPnAiaMCws8nOsE/giphy.gif" alt="cat-img">
-        <h3>Coding Challenges</h3>
-        <p>But my best skill is actually in coding challenges. I am the undisputed king of coding challenges. Hackerrank and Leetcode are my favourite websites for practing coding challenges.</p>
-
+        <div>
+          <h3>Coding Challenges</h3>
+          <p>But my best skill is actually in coding challenges. I am the undisputed king of coding challenges. Hackerrank and Leetcode are my favourite websites for practing coding challenges.</p>
+        </div>
+        <img src="https://media4.giphy.com/media/3oKIPnAiaMCws8nOsE/giphy.gif" alt="cat-img">
       </div>
     </div>
     <hr>
