--- a/js-1/lecture/external-script/index.html
+++ b/js-1/lecture/external-script/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>External script example</h1>
-    <p onclick="clickTrigger()">Click me</p>
+    <button onclick="clickTrigger()">Click me</button>
 
     <script src="script.js"></script>
   </body>
