--- a/js-1/lecture/logging-vs-alerting/alerting.html
+++ b/js-1/lecture/logging-vs-alerting/alerting.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>Alerting example using alert()</h1>
-
+    <p>The user must click on the OK button to close it!</p>
     <script>
         let age = prompt("What is your age?");
         if (age >= 18) {
