--- a/js-1/lecture/logging-vs-alerting/logging.html
+++ b/js-1/lecture/logging-vs-alerting/logging.html
@@ -10,6 +10,7 @@
 
   <body>
     <h1>Logging example using console.log()</h1>
+    <p>Please open the console panel in your browser to see the logging messages!</p>
     <script>
         let x = 5;
         let y = 10;
