--- a/js-1/lecture/inline-script/index.html
+++ b/js-1/lecture/inline-script/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Inline script example</h1>
-    <button onclick="alert('You have just clicked!')">Click me</button> 
+    <button onclick="alert('You have just clicked!');">Click me</button> 
   </body>
 </html>
