rearrange tutorial exercises

--- a/express/tutorial/rmit-store/static-website-materials/product.html
+++ b/express/tutorial/rmit-store/static-website-materials/product.html
@@ -44,7 +44,7 @@
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Fairtrade Pocket Hoodie</h1>
             <h3 class="text-danger">64.95 AUD</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, amet. Vitae ducimus aliquid et rerum amet cupiditate perspiciatis deleniti voluptate reprehenderit, expedita voluptatum aperiam pariatur quidem quaerat. Voluptate, nemo totam.</p>
+            <p>A comfortable and stylish hoodie made from fairtrade materials.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a href="/order" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Order!</a>
               <a href="/product/1/edit" type="button" class="btn btn-outline-secondary btn-lg px-4">Edit</a>
