--- a/bootstrap/lecture/modal-pop-up/index.html
+++ b/bootstrap/lecture/modal-pop-up/index.html
@@ -14,9 +14,11 @@
 
 <body>
     <!--Your Code Goes Here-->
+
+
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
+        Click Me
     </button>
 
     <!-- Modal -->
