--- a/bootstrap/lecture/grid-layout-system/index.html
+++ b/bootstrap/lecture/grid-layout-system/index.html
@@ -17,57 +17,13 @@
     <!--Your Code Goes Here-->
     <div class="container text-center">
         <div class="row">
-            <div class="col">
-                1 of 2
-            </div>
-            <div class="col">
-                2 of 2
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                1 of 3
-            </div>
-            <div class="col">
-                2 of 3
-            </div>
-            <div class="col">
-                3 of 3
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">
-                1 of 3
-            </div>
-            <div class="col-6">
-                2 of 3 (wider)
-            </div>
-            <div class="col">
-                3 of 3
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                1 of 3
-            </div>
-            <div class="col-5">
-                2 of 3 (wider)
-            </div>
-            <div class="col">
-                3 of 3
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">col</div>
+            <div class="col-2">2 of 12</div>
+            <div class="col-4">4 of 12</div>
+            <div class="col-6">6 of 12</div>
           </div>
           <div class="row">
-            <div class="col-8">col-8</div>
-            <div class="col-4">col-4</div>
+            <div class="col-8">8 of 12</div>
+            <div class="col-4">4 of 12</div>
           </div>
     </div>
 
