--- a/bootstrap/lecture/grid-examples/grid-exercise-live/index.html
+++ b/bootstrap/lecture/grid-examples/grid-exercise-live/index.html
@@ -109,6 +109,10 @@
     p{
         margin-bottom: 0;
     }
+
+    .instructions{
+      width: 80%;
+    }
   </style>
   
 </head>
@@ -118,6 +122,12 @@
 
   <div class="flex-container">
     <h2>Exercise 1</h2>
+    <div class="instructions">Trying to make this layout:
+      <ul>
+            <li>Each div will take up 50% of the container's width on extra-large screens (1200px and up) and 100% of the width on screens smaller than that, stacking the divs vertically.</li>
+            <li>Trying to figure out the target layout by resizing the window and try to match it with your current layout!</li>
+      </ul>
+    </div>
     <p>The target layout:</p>
     <div class="container parent">
       <div class="row">
@@ -156,6 +166,7 @@
 
   <div class="flex-container">
     <h2>Exercise 2</h2>
+    <div class="instructions">Trying to figure out how responsive target layout is by resizing the browser window and try to match it with your current layout!</div>
     <p>The target layout:</p>
     <div class="container parent">
       <div class="row">
@@ -196,6 +207,7 @@
   </div>
   <div class="flex-container">
     <h2>Exercise 3</h2>
+    <div class="instructions">Trying to figure out how responsive target layout is by resizing the browser window and try to match it with your current layout!</div>
     <p>The target layout:</p>
     <div class="container parent">
       <div class="row">
