--- a/bootstrap/tutorial/exercise-3/index.html
+++ b/bootstrap/tutorial/exercise-3/index.html
@@ -2,33 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TinDog</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boostrap Exercise</title>
+
+    <!-- Including Boostrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
+    <!--Your Code Goes Here-->
+    <!-- Navigation Bar -->
 
-  <!-- Title -->
-  <section id="title">
 
-  </section>
-  <!-- Features -->
-  <section id="features">
+    <!-- Carousel or Hero Section -->
 
-  </section>
-  <!-- Testimonial -->
-  <section id="testimonial">
 
-  </section>
-  <!-- Pricing -->
-  <section id="pricing">
+    <!-- Info Card Section -->
 
-  </section>
-  <!-- Footer -->
-  <section id="footer">
 
-  </section>
+    <!-- Footer -->
+    
+
+    <!-- Including Boostrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
