--- a/bootstrap/tutorial/exercise-3/index.html
+++ b/bootstrap/tutorial/exercise-3/index.html
@@ -2,31 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boostrap Exercise</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RMIT Store</title>
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/rmit-favicon.png" type="image/png" />
 
-    <!-- Including Boostrap CSS -->
+    <!-- CSS stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <!--Your Code Goes Here-->
-    <!-- Navigation Bar -->
+    <!-- Navigation Section -->
 
 
-    <!-- Carousel or Hero Section -->
+    <!-- Slider or Carousel or Hero Section -->
 
 
-    <!-- Info Card Section -->
+    <!-- Main Section -->
 
 
-    <!-- Footer -->
-    
+    <!-- Footer Area -->
 
-    <!-- Including Boostrap JS -->
+
+    <!-- JS scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
