--- a/bootstrap/tutorial/solutions/exercise-3/index.html
+++ b/bootstrap/tutorial/solutions/exercise-3/index.html
@@ -64,8 +64,8 @@
         <div class="album py-5 bg-body-tertiary" id="products">
             <div class="container">
 
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <div class="col">
+                <div class="row">
+                    <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="card shadow-sm">
                             <img src="assets/images/p-1.jpg" alt="Fairtrade Pocket Hoodie">
                             <div class="card-body">
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="card shadow-sm">
                             <img src="assets/images/p-2.jpg" alt="Fairtrade Zip Hoodie">
                             <div class="card-body">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="card shadow-sm">
                             <img src="assets/images/p-3.jpg" alt="Rudby Jergy">
                             <div class="card-body">
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="card shadow-sm">
                             <img src="assets/images/p-4.jpg" alt="Topaz Premium Zip Jacket">
                             <div class="card-body">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="card shadow-sm">
                             <img src="assets/images/p-5.jpg" alt="Rmit Fairtrade Polo">
                             <div class="card-body">
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="card shadow-sm">
                             <img src="assets/images/p-6.jpg" alt="Portable Charger">
                             <div class="card-body">
@@ -118,8 +118,7 @@
                                 <h4 class="card-text text-danger">10 AUD</h4>
                             </div>
                         </div>
-                    </div>
-
+                    </div>           
                 </div>
             </div>
         </div>
