--- a/bootstrap/tutorial/solutions/exercise-3/index.html
+++ b/bootstrap/tutorial/solutions/exercise-3/index.html
@@ -61,65 +61,63 @@
 
     <!--==========Main Section==========-->
     <main>
-        <div class="album py-5 bg-body-tertiary" id="products">
-            <div class="container">
-
-                <div class="row">
-                    <div class="col-xl-4 col-md-6 col-sm-12">
-                        <div class="card shadow-sm">
-                            <img src="assets/images/p-1.jpg" alt="Fairtrade Pocket Hoodie">
-                            <div class="card-body">
-                                <h3 class="card-title">Fairtrade Pocket Hoodie</h3>
-                                <h4 class="card-text text-danger">64.95 AUD</h4>
-                            </div>
+        <div class="container text-center">
+            <h1 class="display-4 fw-bold text-body-emphasis">Products</h1>
+            <div class="row">
+                <div class="col-xl-4 col-md-6 col-sm-12 my-3">
+                    <div class="card shadow-sm">
+                        <img src="assets/images/p-1.jpg" alt="Fairtrade Pocket Hoodie">
+                        <div class="card-body">
+                            <h3 class="card-title">Fairtrade Pocket Hoodie</h3>
+                            <h4 class="card-text text-danger">64.95 AUD</h4>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6 col-sm-12">
-                        <div class="card shadow-sm">
-                            <img src="assets/images/p-2.jpg" alt="Fairtrade Zip Hoodie">
-                            <div class="card-body">
-                                <h3 class="card-title">Fairtrade Zip Hoodie</h3>
-                                <h4 class="card-text text-danger">59.95 AUD</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-sm-12">
-                        <div class="card shadow-sm">
-                            <img src="assets/images/p-3.jpg" alt="Rudby Jergy">
-                            <div class="card-body">
-                                <h3 class="card-title">Rudby Jergy</h3>
-                                <h4 class="card-text text-danger">69.95 AUD</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-sm-12">
-                        <div class="card shadow-sm">
-                            <img src="assets/images/p-4.jpg" alt="Topaz Premium Zip Jacket">
-                            <div class="card-body">
-                                <h3 class="card-title">Topaz Premium Zip Jacket</h3>
-                                <h4 class="card-text text-danger">34.95 AUD</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-sm-12">
-                        <div class="card shadow-sm">
-                            <img src="assets/images/p-5.jpg" alt="Rmit Fairtrade Polo">
-                            <div class="card-body">
-                                <h3 class="card-title">Rmit Fairtrade Polo</h3>
-                                <h4 class="card-text text-danger">21.95 AUD</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-sm-12">
-                        <div class="card shadow-sm">
-                            <img src="assets/images/p-6.jpg" alt="Portable Charger">
-                            <div class="card-body">
-                                <h3 class="card-title">Portable Charger</h3>
-                                <h4 class="card-text text-danger">10 AUD</h4>
-                            </div>
-                        </div>
-                    </div>           
                 </div>
+                <div class="col-xl-4 col-md-6 col-sm-12 my-3">
+                    <div class="card shadow-sm">
+                        <img src="assets/images/p-2.jpg" alt="Fairtrade Zip Hoodie">
+                        <div class="card-body">
+                            <h3 class="card-title">Fairtrade Zip Hoodie</h3>
+                            <h4 class="card-text text-danger">59.95 AUD</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12 my-3">
+                    <div class="card shadow-sm">
+                        <img src="assets/images/p-3.jpg" alt="Rudby Jergy">
+                        <div class="card-body">
+                            <h3 class="card-title">Rudby Jergy</h3>
+                            <h4 class="card-text text-danger">69.95 AUD</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12 my-3">
+                    <div class="card shadow-sm">
+                        <img src="assets/images/p-4.jpg" alt="Topaz Premium Zip Jacket">
+                        <div class="card-body">
+                            <h3 class="card-title">Topaz Premium Zip Jacket</h3>
+                            <h4 class="card-text text-danger">34.95 AUD</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12 my-3">
+                    <div class="card shadow-sm">
+                        <img src="assets/images/p-5.jpg" alt="Rmit Fairtrade Polo">
+                        <div class="card-body">
+                            <h3 class="card-title">Rmit Fairtrade Polo</h3>
+                            <h4 class="card-text text-danger">21.95 AUD</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12 my-3">
+                    <div class="card shadow-sm">
+                        <img src="assets/images/p-6.jpg" alt="Portable Charger">
+                        <div class="card-body">
+                            <h3 class="card-title">Portable Charger</h3>
+                            <h4 class="card-text text-danger">10 AUD</h4>
+                        </div>
+                    </div>
+                </div>           
             </div>
         </div>
     </main>
