--- a/css-1/lecture/selectors/pseudo-element/index.html
+++ b/css-1/lecture/selectors/pseudo-element/index.html
@@ -23,7 +23,9 @@
     
     <p>Scientists exploring the depths of Monterey Bay unexpectedly encountered a rare and unique species of dragonfish. This species is the rarest of its species.</p>
 
-    <p>When Robison and a team of researchers discovered this fish, they were aboard a week-long expedition.</p>
+    <div>When Robison and a team of researchers discovered this fish, they were aboard a week-long expedition.<br>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id tempore perferendis incidunt reiciendis eum non adipisci vero sunt quia excepturi repudiandae, saepe, cum voluptatem, fugiat beatae. Eos cupiditate rem soluta!<br>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, nemo assumenda numquam nostrum consequatur accusantium dolorum illum, ut tempora obcaecati dignissimos labore sit, placeat corrupti reprehenderit vel soluta reiciendis provident.</div>
 
  
 </body>
